📼🌟 Checkpoint ./.glitch-assets:38693240/2302 ./index.html:38693240/610 ./style.css:38693240/602

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
       <meta charset="UTF-8">
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <title>ItalianRestaurante</title>
+      <title>LaFoodItalianRestaurante</title>
       <link rel="stylesheet" href="style.css">
       <link href="https://fonts.googleapis.com/css2?family=Italianno&display=swap" rel="stylesheet">
       <link href="https://fonts.googleapis.com/css2?family=Glory:ital,wght@1,200&family=Italianno&display=swap" rel="stylesheet">
@@ -130,11 +130,11 @@
          <p>   Our diverse and delicious appetizers will help you with that!</p> 
          <a href=""> <button class="btn">See menu </button></a> 
       </h2> 
-         <img src="appetizer.jpg" alt="" width="500px">
+         <img src="https://cdn.glitch.global/ce1bbffa-743a-4896-a7f7-2c736ff3a148/appetizer.jpg?v=1656087068477" alt="" width="500px">
         </div>
         <hr>
         <div class="box">
-         <img src="main dishes.jpg" alt="" width="500px">
+         <img src="https://cdn.glitch.global/ce1bbffa-743a-4896-a7f7-2c736ff3a148/main%20dishes.jpg?v=1656087135188" alt="" width="500px">
          <h2> Main Dishes
            <p> Resto's menu knows no borders and nationalities. </p>
              <p> At the core of our main courses roaster we have the idea of a cosmopolitan, contemporary cuisine. </p>
@@ -149,11 +149,11 @@
        <p> We at the Resto offer different beverages as well as spirits, and liquors!</p> 
    <a href=""> <button class="btn">See menu </button></a> 
 </h2> 
-   <img src="drinks.jpg" alt="" width="500px">
+   <img src="https://cdn.glitch.global/ce1bbffa-743a-4896-a7f7-2c736ff3a148/drinks.jpg?v=1656087180407" alt="" width="500px">
   </div>
 <hr>
 <div class="box">
-   <img src="soup.jpg" alt="" width="500px">
+   <img src="https://cdn.glitch.global/ce1bbffa-743a-4896-a7f7-2c736ff3a148/soup.jpg?v=1656087230806" alt="" width="500px">
    <h2> Soups
      <p>The start of any meal is so important... </p>
        <p> So brace your appetite, while waiting for your main course.  </p>
@@ -169,11 +169,11 @@
    <p>  Our diverse and delicious appetizers will help you with that!</p> 
    <a href=""> <button class="btn">See menu </button></a> 
 </h2> 
-<img src="seafood.jpg" alt="" width="500px">
+<img src="https://cdn.glitch.me/ce1bbffa-743a-4896-a7f7-2c736ff3a148/seafood.jpg?v=1656087291427" alt="" width="500px">
   </div>
   <hr>
   <div class="box">
-   <img src="cake.jpg" alt="" width="500px">
+   <img src="https://cdn.glitch.global/ce1bbffa-743a-4896-a7f7-2c736ff3a148/cake.jpg?v=1656087330590" alt="" width="500px">
    <h2> Desserts
      <p>That sweet taste of a dessert at the end of the meal... </p>
        <p> If you look forward to it too, than you're at the right place!  </p>
