🌍💃 Checkpoint ./index.html:38693240/11

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             <h1 >Discover Our Menu</h1>
             <h4>
             We cook our dishes from the freshest ingredients</h4>
-            <button class="lup"> <img src="https://cdn.glitch.global/ce1bbffa-743a-4896-a7f7-2c736ff3a148/magnifying-glass.png?v=1656087017562" alt="" width="20px" height="20px"> here </button>   
+            <button class="lup"> look <img src="https://cdn.glitch.global/ce1bbffa-743a-4896-a7f7-2c736ff3a148/magnifying-glass.png?v=1656087017562" alt="" width="20px" height="20px"> here </button>   
          </div>
          <hr>
          <div class="ring">
